# couliglig_repo

./: .gitignore
src/couliglig_bot/: package.xml  setup.cfg  setup.py
src/couliglig_bot/config/: custom_cartographer_launch.py  custom_navigation2_launch.py  custom_occupancy_grid_launch.py  custom_turtlebot3_lds_2d.lua  my_map.pgm  my_map.yaml  nav2_params.yaml  ros2control.yaml
src/couliglig_bot/couliglig_bot/: my_driver.py  my_multiple_driver.py
src/couliglig_bot/launch/: robot_launch.py  robot_launch_multiple.py
src/couliglig_bot/maps/: my_map2.pgm  my_map2.yaml
src/couliglig_bot/resource/: couliglig_bot.urdf  couliglig_multiple_bot.urdf
src/couliglig_bot/worlds/: .couliglig_multiple_bot.wbproj  couliglig_bot.wbt  couliglig_multiple_bot.wbt
src/my_package/: package.xml  setup.py
src/my_package/launch/: custom_cartorapher.launch.py  launch_file.py
src/my_package/my_package/: my_camera.py  zed_mapping.py
src/turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py  gazebo_multi_nav2_world_orig.launch.py
src/zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
